# CrfPlot

./: .gitignore  ICRF_transform.py  ITRF2014_to ITRF2008.py  ITRF2014_transform.py  Inverse_transform.py  README.md  ToyProblem.py  __main__.py  demo.py  demonstration_script.py  interface.py  logic.py  regression.py  requirements.txt  sample.txt  select_stations.py  setup.cfg  test.txt  test_transform.py
HelmertTool/: calc.py  io.py  load.py  plot.py  transform.py  visualise.py
HelmertTool/classes/: HelmertParameters.py  HelmertTransform.py
HelmertTool/interface/: FileSelecter.py  InterfaceState.py  MainWindow.py  ParameterEntry.py  ParameterView.py  Plot.py  SelectStations.py
HelmertTool/logic/: __init__.py  load.py  plot.py  transform.py  units.py
archive/: demo.py  interface.py
documentation/: developer_guide.txt  user_guide.txt
examples/: ITRF2014_to ITRF2008.py  Translations_only.py  demonstration_script.py
