[metadata]
name = HelmertTool
version = 0.0.1

[options]
packages = find:
install_requires =
    requests
    importlib; python_version == "2.6"
    numpy==1.21.1 
    pandas==1.3.1
    matplotlib==3.4.2
    geopandas==0.9.0


[options.entry_points]
console_scripts =
    HelmertTool = HelmertTool:run

