[metadata]
name = HelmertTool
version = 0.0.1

[options]
packages = find:
install_requires =
    python_version>="3.9"
    numpy==1.21.1 
    pandas==1.3.1
    matplotlib==3.4.2

[options.entry_points]
console_scripts =
    HelmertTool = HelmertTool:run

[options.package_data]
* = map.png, transform_sites.txt